Fixing styling on boder left when on mobile screen

--- a/src/app/components/work/work.component.css
+++ b/src/app/components/work/work.component.css
@@ -98,8 +98,10 @@ h4.content {
     padding-bottom: 2rem;
 }
 
-.border-left {
-    border-left: 1px solid #aaadb7;
+@media screen and (min-width: 769px) {
+    .border-left {
+        border-left: 1px solid #aaadb7;
+    }
 }
 
 button.contact {
